# lakehouse-mlops-aiops-lab

./: .gitignore  CONTRIBUTING.md  README.md  Taskfile.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
analytics/: .gitignore  dbt_project.yml
analytics/profiles/: .user.yml  profiles.yml.template
apps/: analysis_dashboard.py  api_server.py
docs/: AGENTS.md  assistant_context.md  onborading.md  repository_map.md
docs/adr/: 0001-dev-environment.md  0002-local-spark-iceberg.md  0003-iceberg-ops.md  0004-data-quality-gate.md  0005-gold-modeling.md  0006-shared-iceberg-catalog-with-hms.md  0007-dbt-trino-analytics-layer.md  0008-metric-layer-ownership.md  0009-read-only-analysis-dashboard.md  0010-api-layer.md
docs/data_contracts/: events.md  gold_metrics.md  silver_events.md  silver_quality_rules.md
docs/learning/: 0001-packaging-and-build-system.md  0002-src-layout-and-import.md  0003-uv-init-and-project-installation.md  0004-local-infra-minio-mlflow.md  (+12 more)
infra/: .env.example  docker-compose.yml
scripts/: _workflow_common.ps1  bootstrap_local_platform.ps1  experiment_gold_modes.ps1  generate_product_catalog.py  prepare_hive_cache.ps1  render_catalog_configs.ps1  render_dbt_profile.ps1  smoke_all.ps1  smoke_analytics_stack.ps1  smoke_data_pipeline.ps1  smoke_dbt_trino_analytics.ps1  smoke_gold_metrics.ps1  smoke_iceberg_ops.ps1  smoke_iceberg_table.ps1  smoke_minio.py  smoke_mlflow.py  smoke_platform_foundation.ps1  smoke_raw_ingest.py  smoke_shared_catalog_spark_trino.ps1  smoke_silver_quality.ps1  smoke_silver_transform.py
tests/: test_smoke.py
(+30 files in other folders)
